--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +32,16 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.textbox {
+  margin: 0.5em;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding: 1.5em;
+  box-shadow: #242424 1px 2px 2px;
+  background: #747bff;
+  border-radius: 1em;
+  grid-template-rows: repeat(2, auto);
 }
